Fix historyimg margin to 10px to fix gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -151,7 +151,8 @@ input[type=submit]:hover {
 
 /* history side bar image */
 .historyimg {
-  background-color: #253439;
+  margin: 10px;
+  background-color: whitesmoke;
   width: 50%;
   padding: 10px;
 }
